tests/NormalTests/paczka2/big_fuzzy/51540647.err
Error in line 8: hjrYe5m S89 204,40
Error in line 11: Lfq A264 4,4
Error in line 18: nyAj1Vy A264 112,1
Error in line 27: nyAj1Vy S89 96,8
Error in line 25: hjrYe5m S89 97,1
Error in line 29: 0k3kMdOO S823 335,6
Error in line 34: Lfq S823 97,9
Error in line 45: hjrYe5m S828 21,5
Error in line 54: nyAj1Vy S823 92,8
Error in line 50: 0k3kMdOO S89 95,4
Error in line 55: FRF97y A264 8,4
Error in line 52: S828 A264 56,1
Error in line 60: W7Srgw7RHO A264 77,1
Error in line 63: S828 S89 16,0
Error in line 74: W7Srgw7RHO S823 303,2
Error in line 80: FRF97y S828 201,9
Error in line 84: S-2- S-23 77,3
Error in line 83: W7Srgw7RHO S89 34,8
Error in line 91: Lfq S828 49,0
Error in line 64: 0k3kMdOO S823 165,7
Error in line 92: S828 S823 130,6
Error in line 102: Lfq S828 83,6
Error in line 106: W7Srgw7RHO S823 80,0
Error in line 115: hjrYe5m S89 80,7
Error in line 117: W7Srgw7RHO S89 57,2
Error in line 118: hjrYe5m A264 885,3
Error in line 129: S828 S823 32,7
Error in line 135: S828 A264 40,2
Error in line 137: S828 S828 12,8
Error in line 134: hjrYe5m S823 61,3
Error in line 140: hjrYe5m S89 17,1
Error in line 143: hjrYe5m S828 65,6
Error in line 147: hjrYe5m S89 63,5
Error in line 150: Lfq Ss9 97,0
Error in line 169: FRF97y S823 37,3
Error in line 177: FRF97y S823 11,2
Error in line 178: FRF97y S828 12,1
Error in line 181: FRF97y S89 76,1
Error in line 190: 0k3kMdOO S89 95,1
Error in line 185: hjrYe5m S828 13,0
Error in line 173: W7Srgw7RHO S828 1,7
Error in line 193: 0k3kMdOO A264 62,2
Error in line 187: S828 S828 46,8
Error in line 198: S828 S89 54,8
Error in line 204: S828 S823 31,5
Error in line 209: nyAj1Vy S89 7,7
Error in line 216: hjrYe5m S828 54,0
Error in line 222: S828 A264 53,0
Error in line 232: S828 S828 1,0
Error in line 236: S828 A264 74,0
